# sherpent

./: .gitignore  LICENSE  README.md
code/head/: CMakeLists.txt  sdkconfig
code/lib/sherpent/: CMakeLists.txt
code/lib/sherpent/include/: led.h  power.h  safety.h  servo.h  sherpent.h
code/lib/sherpent/src/: led.c  power.c  safety.c  servo.c  sherpent.c
code/module/head/: CMakeLists.txt  sdkconfig
code/module/head/main/: CMakeLists.txt  ble.c  ble.h  effect.c  effect.h  head.c  head.h  movement.c  movement.h
code/schemas/: communication.c  communication.h  target.h
code/utils/: utils.h
elec/: PatchNote_Modules.txt
elec/BomMerge/: .~lock.BomSherpentRevA.csv#  .~lock.BomSherpentRevB.csv#  .~lock.merged_bom.csv#  BomSherpentRevA.csv  BomSherpentRevB.csv  merge.py  merged_bom.csv
elec/Calculs/: bilanEnergetique.m  octave-workspace
elec/DATASHEET/: TP4056_ Your Essential guide to the LiPo Battery Charger IC.html
elec/SHERPENT20250113/: #auto_saved_files#  .gitignore  SHERPENT20250113-ALIM_Cu.gbr  SHERPENT20250113-B_Cu.gbr  SHERPENT20250113-B_Mask.gbr  SHERPENT20250113-B_Paste.gbr  SHERPENT20250113-B_Silkscreen.gbr  SHERPENT20250113-Edge_Cuts.gbr  SHERPENT20250113-F_Cu.gbr  SHERPENT20250113-F_Mask.gbr  SHERPENT20250113-F_Paste.gbr  SHERPENT20250113-F_Silkscreen.gbr  SHERPENT20250113-GND_Cu.gbr  SHERPENT20250113-NPTH.drl  SHERPENT20250113-PTH.drl  SHERPENT20250113-job.gbrjob  SHERPENT20250113.csv  SHERPENT20250113.kicad_pcb  SHERPENT20250113.kicad_prl  SHERPENT20250113.kicad_pro  (+11 more)
mec/: Trucs_a_ameliorer.txt
planning/: ProtocoleBatterieSherpent.docx
(+154 files in other folders)
